--- a/index.html
+++ b/index.html
@@ -1,75 +1,81 @@
 <!DOCTYPE html>
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Ricardo César | Desenvolvedor</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Ricardo César | Soluções em Tecnologia</title>
+    <link rel="stylesheet" href="files/style.css">
 </head>
 
-<body>
+<body class="darkmode">
+    <header><a title="Desenvolvedor de Soluções em Tecnologia">Desenvolvedor de Soluções em Tecnologia</a>
+        <a href="#contact" title="Contact Me" rel="author">Contate-me</a>
+    </header>
+    <div class="content">
+        <div class="single">
+            <section class="hero"><strong>Olá, me chamo Ricardo.</strong>
+                <h1>Sou um Estudante e Desenvolvedor em Soluções Tecnológicas</h1>
+                <p>Sempre busco as soluções mais robustas e elegantes para todo problema.</p>
+            </section>
+            <section class="services">
+                <h2>Como posso te ajudar?</h2>
+                <div class="grid">
+                    <div class="panel ico-backend">
+                        <h4>Bancos de Dados</h4>
+                        <p>Planejamento e modelagem de Bancos de Dados, com diagramas explicativos e intuitivos. Essencial para qualquer aplicação!</p>
+                    </div>
+                    <div class="panel ico-frontend">
+                        <h4>Desenvolvimento de APIs</h4>
+                        <p>Construo uma API simples, eficiente e bem documentada que resolve seu problema!
+                        </p>
+                    </div>
 
-    <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
-        <a class="navbar-brand" href="#">Ricardo Mendonça</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav lead">
-                <a class="nav-item nav-link" href="#sobre">Sobre mim <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#contato">Contato</a>
-            </div>
-        </div>
-    </nav>
+                    <div class="panel ico-api">
+                        <h4>Soluções gerais em Algoritmos e Estruturas de Dados</h4>
+                        <p>Problemas complexos requerem um conhecimento especializado dos fundamentos da Computação. Estou sempre disposto a me aprofundar nesta área.</p>
+                    </div>
 
-    <section class="jumbotron text-center" id ="sobre">
-        <div class="container">
-            <img src = "48a04736-f673-411f-a1b0-aa5c31a8e79c.jpeg" alt = "foto" class = " foto-perfil">
-            <h1 class="jumbotron-heading">Sobre mim</h1>
-            <p class="lead fonte">Me chamo Ricardo, sou aluno do curso de Ciência da Computação da UNIFOR e monitor
-                institucional da disciplina de Raciocínio Lógico e Algorítmico. Me divirto aprendendo coisas novas e
-                meus principais interesses são desenvolvimento Web e Internet das Coisas</p>
+                    <div class="panel ico-flutter">
+                        <h4>Precisa de Algo Mais?</h4>
+                        <p>Eu aprendo! Gosto de desafios e tento aproveitar toda oportunidade de aprendizagem. Entre em contato!</p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="about">
+                <h2>Sobre mim</h2>
+                <div class="flexed">
+                    <div class="copy">
+                        <p>
+                            Sou estudante de Ciências da Computação na Universidade de Fortaleza e estagiário no grupo de formação Vortex. Atualmente, atuo na área de desenvolvimento back-end e de APIs.
+                            Tenho experiência como monitor da disciplina de Raciocínio Lógico e Algorítimico e adoro compartilhar conhecimento.
+                            Acredito que soluções em software devem ser simples e eficientes tanto para os desenvolvedores quanto para o usuário final e me dedico para manter esse padrão no projetos em que participo.
+                            Entre os meus entereces no momento, tenho desenvolvimento de jogos e contribuição com projetos open source.
+
+                        </p>
+                        <p>Gosto de usar as tecnologias <a href="https://rubyonrails.org/">Ruby on Rails</a>, <a href="https://www.python.org/">Python</a>
+                            e <a href="https://nodejs.org/en/">Node.js</a></p>
+                    </div>
+
+                </div>
+            </section>
+            <section class="contact-form">
+                <div>
+                    <a name='contact'></a>
+                    <h3>Entre em contato</h3>
+                    <p>Podemos conversar sobre seus projetos e necessidades!</p>
+                    <p></p>
+                    <h6>Me envie um email:</h6><a href="mailto:ricardomendonca@unifor.br" title="My Email Address">ricardomendonca@unifor.br</a>
+                    <p></p>
+                    <h6>Online</h6>
+                    <div class="social"><a href="https://github.com/mendoncas" class="icon github" title="Follow me on Github" rel="author noopener">Github</a>
+                        <a href="http://lattes.cnpq.br/7336933658294396" rel='authornoopener'>Currículo Lattes</a>
+                    </div>
+                </div>
+            </section>
         </div>
-    </section>
-    <div class="container">
-        <h1 class="jumbotron-heading">Tecnologias</h1>
-        <p class="lead text-muted">
-        <ul class="list-group list-group-flush lead letra">
-            <li class="list-group-item">JavaScript</li>
-            <li class="list-group-item">Node.js para back-end</li>
-            <li class="list-group-item">HTML</li>
-            <li class="list-group-item">CSS</li>
-            <li class="list-group-item">Bootstrap</li>
-            <li class="list-group-item">Bancos de dados com SQL e MongoDB</li>
-        </ul>
-        </p>
     </div>
-    <br>
-    </nav>
-    <section class="jumbotron text-center " id="contato">
-        <div class=" row">
-            <div class="col-md-8 offset-md-2">
-                <h2 class="jumbotron-heading">Contato</h1>
-                    <p class="fonte">Email: mendonca@edu.unifor.br</p>
-                    <p class="fonte">Fone: (88) 99687-0459</p>
-            </div>
-        </div>
-    </section>
-    </section>
+    <footer><span>2021</span>
+    </footer>
 </body>
+
 </html>
