--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                         <p>
                             Sou estudante de Ciências da Computação na Universidade de Fortaleza e estagiário no grupo de formação Vortex. Atualmente, atuo na área de desenvolvimento back-end e de APIs.
                             Tenho experiência como monitor da disciplina de Raciocínio Lógico e Algorítimico e adoro compartilhar conhecimento.
-                            Acredito que soluções em software devem ser simples e eficientes tanto para os desenvolvedores quanto para o usuário final e me dedico para manter esse padrão no projetos em que participo.
-                            Entre os meus entereces no momento, tenho desenvolvimento de jogos e contribuição com projetos open source.
+                            Acredito que soluções em software devem ser simples e eficientes tanto para os desenvolvedores quanto para o usuário final e me dedico para manter esse padrão em projetos nos quais participo.
+                            Entre os meus interesses no momento, tenho desenvolvimento de jogos e contribuição com projetos open source.
 
                         </p>
                         <p>Gosto de usar as tecnologias <a href="https://rubyonrails.org/">Ruby on Rails</a>, <a href="https://www.python.org/">Python</a>
